--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div class="calculator">
-      <div class="blank"></div>
+      <div class="printHere">
+        <p>999992244</p>
+      </div>
       <div class="buttons">
         <button>AC</button>
         <button>±</button>
