--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <div class="calculator">
       <div class="printHere">
-        <p>999992244</p>
+        <p></p>
       </div>
       <div class="buttons">
         <button>AC</button>
         <button>±</button>
-        <button>%</button>
+        <button>/</button>
         <button>÷</button>
         <button>7</button>
         <button>8</button>
