clicking buttons will display numbers

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="printHere">
-        <p></p>
+      <div class="printDiv">
+        <p id="printP"></p>
       </div>
       <div class="buttons">
         <button>AC</button>
